[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portman"
version = "0.1.0"
description = "Local reverse proxy for production-like .localhost domains"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9,<4.0",
    "pydantic>=2.0,<3.0",
    "PyYAML>=6.0,<7.0",
    "watchdog>=4.0,<5.0",
    "typer>=0.9,<1.0",
    "rich>=13.0,<14.0",
]

[project.scripts]
portman = "portman.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-aiohttp>=1.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "types-PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/portman"]

# ---------- mypy (strict) ----------
[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

# ---------- ruff ----------
[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["portman"]

# ---------- pytest ----------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
